@@ -22,3 +22,4 @@ Changes:
 18. Added ipv6,alpha and subnet validation rule method.
 19. Fix bug in StickyRule validation class.
 20. Added FileHandling class.
+21. Update Logger class by using new FileHandling class.
